<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mapButton"
            style="@style/SOSWidget.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/sos_widget_button_bg_white_to_black"
            android:text="@string/sos_widget_map"
            android:textColor="@color/sos_widget_button_text_black_to_white"
            android:textSize="14sp"
            app:strokeColor="@color/sos_widget_button_bg_gray_to_white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/satelliteButton"
            style="@style/SOSWidget.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/sos_widget_button_bg_white_to_black"
            android:text="@string/sos_widget_satellite"
            android:textColor="@color/sos_widget_button_text_black_to_white"
            android:textSize="14sp"
            app:strokeColor="@color/sos_widget_button_bg_gray_to_white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/hybridButton"
            style="@style/SOSWidget.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/sos_widget_button_bg_white_to_black"
            android:text="@string/sos_widget_hybrid"
            android:textColor="@color/sos_widget_button_text_black_to_white"
            android:textSize="14sp"
            app:strokeColor="@color/sos_widget_button_bg_gray_to_white" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

</LinearLayout>